[gd_scene load_steps=3 format=2]

[ext_resource path="res://Metronome.gd" type="Script" id=1]
[ext_resource path="res://assets/50070__m1rk0__metronom-klack.wav" type="AudioStream" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metronome" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
columns = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartBPMLabel" type="Label" parent="Metronome"]
margin_top = 5.0
margin_right = 83.0
margin_bottom = 19.0
text = "Original BPM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartBPM" type="LineEdit" parent="Metronome"]
margin_left = 87.0
margin_right = 145.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 56, 24 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndBPMLabel" type="Label" parent="Metronome"]
margin_top = 33.0
margin_right = 83.0
margin_bottom = 47.0
text = "Target BPM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndBPM" type="LineEdit" parent="Metronome"]
margin_left = 87.0
margin_top = 28.0
margin_right = 145.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 56, 24 )
text = "120"

[node name="LengthLabel" type="Label" parent="Metronome"]
margin_top = 61.0
margin_right = 83.0
margin_bottom = 75.0
text = "Time (s)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Length" type="LineEdit" parent="Metronome"]
margin_left = 87.0
margin_top = 56.0
margin_right = 145.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 56, 24 )
text = "600"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeElapsedLabel" type="Label" parent="Metronome"]
margin_top = 87.0
margin_right = 83.0
margin_bottom = 101.0
text = "0 s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Metronome"]
stream = ExtResource( 2 )

[node name="StartButton" type="Button" parent="Metronome"]
margin_left = 87.0
margin_top = 84.0
margin_right = 145.0
margin_bottom = 104.0
toggle_mode = true
text = "Start"

[connection signal="toggled" from="Metronome/StartButton" to="Metronome" method="_on_StartButton_toggled"]
